--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "wrangler dev"
+    "register": "node src/deployCommandsDev.js",
+    "register:prod": "node src/deployCommands.js",
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
