--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "register": "node src/deployCommandsDev.js",
-    "register:prod": "node src/deployCommands.js",
+    "register": "node src/deployCommands.js",
     "start": "node src/index.js"
   },
   "author": "",
